# xpoa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
cpp_code/: AlignConfig.cpp  AlignConfig.h  AlignSparseAlignment.h  CMakeLists.txt  ChainSeeds.h  FindSeeds.h  Index-inl.h  Index.h  IndexHit.h  IndexHits.h  Interval.cpp  ModelInternalInitializer.h  MoveAppend.h  Mutation.cpp  Mutation.h  PbcopperConfig.h  PoaAlignmentMatrix.h  PoaConsensus.cpp  PoaConsensus.h  PoaDraft.cpp  PoaDraft.h  PoaGraph.cpp  PoaGraph.h  PoaGraphImpl.cpp  PoaGraphImpl.h  PoaGraphTraversals.cpp  RangeFinder.cpp  RangeFinder.h  RangeFinderV1.cpp  RangeFinderV1.h  RangeFinderV2.cpp  RangeFinderV2.h  SafeSubtract.h  Seed-inl.h  Seed.h  Seeds-inl.h  Seeds.h  Sequence.cpp  Settings.h  SparseAlignment.h  (+3 more)
cpp_code/edlib/: AlignmentResult.h  AlignmentTools.h  Cigar.h  CigarOperation.h  Config.h  DiffCounts.h  EdlibGlobalAlign.h  Lookups.h  SequenceUtils.h  Ssize.h  edlib.h
src/: dna.rs  lib.rs  xpoa.rs  xpoa_sys.rs
